[gd_scene load_steps=5 format=2]

[ext_resource path="res://Themes/MenuTheme.tres" type="Theme" id=1]
[ext_resource path="res://Images/coin.png" type="Texture" id=2]
[ext_resource path="res://Images/heart.png" type="Texture" id=3]
[ext_resource path="res://Scences/Menu/Menu.gd" type="Script" id=4]

[node name="MenuPanel" type="Control"]
anchor_top = 0.000763745
anchor_bottom = 0.000763787
margin_right = 200.0
margin_bottom = 200.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinHBox" type="HBoxContainer" parent="."]
margin_top = 40.0
margin_right = 200.0
margin_bottom = 40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CoinHBox"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 2 )
expand = true

[node name="CoinText" type="RichTextLabel" parent="CoinHBox"]
margin_left = 44.0
margin_right = 200.0
margin_bottom = 40.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_colors/default_color = Color( 1, 0.74902, 0.156863, 1 )
text = "0"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoodHBox" type="HBoxContainer" parent="."]
margin_top = 100.0
margin_right = 200.0
margin_bottom = 40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MoodHBox"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 3 )
expand = true

[node name="MoodText" type="RichTextLabel" parent="MoodHBox"]
margin_left = 44.0
margin_right = 200.0
margin_bottom = 40.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_colors/default_color = Color( 1, 0.298039, 0.223529, 1 )
text = "0"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
